force-app/main/default/objects/df_160_person__c/df_160_person__c.object-meta.xml
<CustomObject>
    <label>Person</label>
    <nameField>
        <label>Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>