force-app/main/default/objects/df_160_person__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Persons</relationshipLabel>
    <relationshipName>Persons</relationshipName>
    <type>Lookup</type>
</CustomField>