force-app/main/default/objects/df_160_person__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>(
  YEAR(TODAY()) -
  (
    IF(
      VALUE(RIGHT(Birthday__c, 2)) &lt;= VALUE(RIGHT(TEXT(YEAR(TODAY())), 2)),
      2000,
      1900
    ) 
    + VALUE(RIGHT(Birthday__c, 2))
  )
)
-
IF(
  (MONTH(TODAY()) * 100 + DAY(TODAY())) &lt;
  (VALUE(MID(Birthday__c, 3, 2)) * 100 + VALUE(LEFT(Birthday__c, 2))),
  1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>