force-app/main/default/objects/df_160_person__c/fields/anden_pers_cpr_radio__c.field-meta.xml
<CustomField>
    <fullName>anden_pers_cpr_radio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPR-nummer</label>
    <type>Checkbox</type>
</CustomField>