force-app/main/default/objects/df_160_person__c/fields/Associated_Person__c.field-meta.xml
<CustomField>
    <fullName>Associated_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Person</label>
    <referenceTo>Associated_Person__c</referenceTo>
    <relationshipLabel>Persons</relationshipLabel>
    <relationshipName>Persons</relationshipName>
    <type>Lookup</type>
</CustomField>