force-app/main/default/objects/df_160_person__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <formula>LPAD(TEXT(FLOOR(person_fdselsdato__c)), 6, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday</label>
    <type>Text</type>
</CustomField>