force-app/main/default/objects/df_160_person__c/fields/CPR_Formula__c.field-meta.xml
<CustomField>
    <fullName>CPR_Formula__c</fullName>
    <formula>Birthday__c &amp; Last_4_Digits_of_CPR_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPR Formula</label>
    <type>Text</type>
</CustomField>