force-app/main/default/objects/df_160_person__c/fields/Day_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Birth__c</fullName>
    <formula>LEFT( Birthday__c , 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Birth</label>
    <type>Text</type>
</CustomField>