force-app/main/default/objects/df_160_person__c/fields/evt_udenl_persnr__c.field-meta.xml
<CustomField>
    <fullName>evt_udenl_persnr__c</fullName>
    <label>Evt. udenlandsk personnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>