force-app/main/default/objects/df_160_person__c/fields/forldre__c.field-meta.xml
<CustomField>
    <fullName>forldre__c</fullName>
    <label>Forældre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>forldre_flles</fullName>
                <label>Fælles barn</label>
            </value>
            <value>
                <fullName>forldre_p1</fullName>
                <label>Barn af Person 1</label>
            </value>
            <value>
                <fullName>forldre_p2</fullName>
                <label>Barn af Person 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>