force-app/main/default/objects/df_160_person__c/fields/Has_Children__c.field-meta.xml
<CustomField>
    <fullName>Has_Children__c</fullName>
    <formula>OR(
 journal_dk_new__r.single_har_du_brn__c  = TRUE,
OR(
ISPICKVAL( journal_dk_new__r.har_du_i_brn__c , &quot;brn_ja_flles_brn&quot;),
ISPICKVAL( journal_dk_new__r.har_du_i_brn__c , &quot;brn_ja_sammenbragte_brn&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Children</label>
    <type>Checkbox</type>
</CustomField>