force-app/main/default/objects/df_160_person__c/fields/Has_More_than_1_Child__c.field-meta.xml
<CustomField>
    <fullName>Has_More_than_1_Child__c</fullName>
    <formula>journal_dk_new__r.har_du_i_mere_end_t_barn__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has More than 1 Child</label>
    <type>Checkbox</type>
</CustomField>