force-app/main/default/objects/df_160_person__c/fields/hf_person__c.field-meta.xml
<CustomField>
    <fullName>hf_person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HF - Person</label>
    <type>Checkbox</type>
</CustomField>