force-app/main/default/objects/df_160_person__c/fields/Last_4_Digits_of_CPR_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits_of_CPR_Number__c</fullName>
    <formula>LPAD(TEXT(FLOOR(person_sidste_4_cpr__c)), 4, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 4 Digits of CPR-Number</label>
    <type>Text</type>
</CustomField>