force-app/main/default/objects/df_160_person__c/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <formula>TEXT(journal_dk_new__r.stamdata_civilstatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marital Status</label>
    <type>Text</type>
</CustomField>