force-app/main/default/objects/df_160_person__c/fields/Month_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Month_of_Birth__c</fullName>
    <formula>MID( Birthday__c , 3, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month of Birth</label>
    <type>Text</type>
</CustomField>