force-app/main/default/objects/df_160_person__c/fields/org_person_cvrnummer__c.field-meta.xml
<CustomField>
    <fullName>org_person_cvrnummer__c</fullName>
    <label>CVR-nummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>