force-app/main/default/objects/df_160_person__c/fields/organisationens_navn__c.field-meta.xml
<CustomField>
    <fullName>organisationens_navn__c</fullName>
    <label>Organisationens navnx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>