force-app/main/default/objects/df_160_person__c/fields/Person1_NemID_MitID__c.field-meta.xml
<CustomField>
    <fullName>Person1_NemID_MitID__c</fullName>
    <formula>AND(person_hidden_person_1__c = true, journal_dk_new__r.p1_ff_nemid_mitid__c = true)</formula>
    <label>Person1 NemID / MitID</label>
    <type>Checkbox</type>
</CustomField>