force-app/main/default/objects/df_160_person__c/fields/Person2_NemID_MitID__c.field-meta.xml
<CustomField>
    <fullName>Person2_NemID_MitID__c</fullName>
    <formula>AND( person_hidden_person_2__c = true, journal_dk_new__r.p2_ff_nemid_mitid__c = true)</formula>
    <label>Person2 NemID / MitID</label>
    <type>Checkbox</type>
</CustomField>