force-app/main/default/objects/df_160_person__c/fields/person_brn_forldremyndighed__c.field-meta.xml
<CustomField>
    <fullName>person_brn_forldremyndighed__c</fullName>
    <label>Forældremyndighed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>