force-app/main/default/objects/df_160_person__c/fields/person_cpr_bool__c.field-meta.xml
<CustomField>
    <fullName>person_cpr_bool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPR-nummer</label>
    <type>Checkbox</type>
</CustomField>