force-app/main/default/objects/df_160_person__c/fields/person_cpr_bool_kan_vi__c.field-meta.xml
<CustomField>
    <fullName>person_cpr_bool_kan_vi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kan vi få fat i CPR-nummeret?</label>
    <type>Checkbox</type>
</CustomField>