force-app/main/default/objects/df_160_person__c/fields/person_efternavn__c.field-meta.xml
<CustomField>
    <fullName>person_efternavn__c</fullName>
    <label>Efternavnx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>