force-app/main/default/objects/df_160_person__c/fields/person_email__c.field-meta.xml
<CustomField>
    <fullName>person_email__c</fullName>
    <label>Emailadresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>