force-app/main/default/objects/df_160_person__c/fields/person_fdeefternavn__c.field-meta.xml
<CustomField>
    <fullName>person_fdeefternavn__c</fullName>
    <label>Fødeefternavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>