force-app/main/default/objects/df_160_person__c/fields/person_fdefornavn__c.field-meta.xml
<CustomField>
    <fullName>person_fdefornavn__c</fullName>
    <label>Fødefornavn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>