force-app/main/default/objects/df_160_person__c/fields/person_fdselsdato__c.field-meta.xml
<CustomField>
    <fullName>person_fdselsdato__c</fullName>
    <label>Fødselsdato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>