force-app/main/default/objects/df_160_person__c/fields/person_fdselsdato_date_field__c.field-meta.xml
<CustomField>
    <fullName>person_fdselsdato_date_field__c</fullName>
    <label>Fødselsdato</label>
    <type>DateTime</type>
</CustomField>