force-app/main/default/objects/df_160_person__c/fields/person_fdt_under_andet_navn__c.field-meta.xml
<CustomField>
    <fullName>person_fdt_under_andet_navn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Født under andet navn</label>
    <type>Checkbox</type>
</CustomField>