force-app/main/default/objects/df_160_person__c/fields/person_fornavn__c.field-meta.xml
<CustomField>
    <fullName>person_fornavn__c</fullName>
    <label>Fornavnx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>