force-app/main/default/objects/df_160_person__c/fields/person_hf_barn__c.field-meta.xml
<CustomField>
    <fullName>person_hf_barn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HF - Barn</label>
    <type>Checkbox</type>
</CustomField>