force-app/main/default/objects/df_160_person__c/fields/person_hf_pot_fuldm_ff_p1__c.field-meta.xml
<CustomField>
    <fullName>person_hf_pot_fuldm_ff_p1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HF - Potentiel fuldmægtig FF Per 9a070</label>
    <type>Checkbox</type>
</CustomField>