force-app/main/default/objects/df_160_person__c/fields/person_hf_pot_vrge__c.field-meta.xml
<CustomField>
    <fullName>person_hf_pot_vrge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HF - Potentiel Værge BT</label>
    <type>Checkbox</type>
</CustomField>