force-app/main/default/objects/df_160_person__c/fields/person_hidden_anden_type_person__c.field-meta.xml
<CustomField>
    <fullName>person_hidden_anden_type_person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Field - Anden type person</label>
    <type>Checkbox</type>
</CustomField>