force-app/main/default/objects/df_160_person__c/fields/person_hidden_barn_single__c.field-meta.xml
<CustomField>
    <fullName>person_hidden_barn_single__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Field - Barn af Single</label>
    <type>Checkbox</type>
</CustomField>