force-app/main/default/objects/df_160_person__c/fields/person_hidden_forhnd_p1__c.field-meta.xml
<CustomField>
    <fullName>person_hidden_forhnd_p1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Field - Forhåndssamtykke  037f9</label>
    <type>Checkbox</type>
</CustomField>