force-app/main/default/objects/df_160_person__c/fields/person_hidden_general_p1__c.field-meta.xml
<CustomField>
    <fullName>person_hidden_general_p1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Field - Modtager af Gener 2d50e</label>
    <type>Checkbox</type>
</CustomField>