force-app/main/default/objects/df_160_person__c/fields/person_hidden_p1_ff_primr_fuldm__c.field-meta.xml
<CustomField>
    <fullName>person_hidden_p1_ff_primr_fuldm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Field - P1 - FF - Primær  f8c7a</label>
    <type>Checkbox</type>
</CustomField>