force-app/main/default/objects/df_160_person__c/fields/person_hidden_p2_ff_subs_fuldm__c.field-meta.xml
<CustomField>
    <fullName>person_hidden_p2_ff_subs_fuldm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Field - P2 - FF - Subsidi 33687</label>
    <type>Checkbox</type>
</CustomField>