force-app/main/default/objects/df_160_person__c/fields/person_hidden_person_2__c.field-meta.xml
<CustomField>
    <fullName>person_hidden_person_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Field - Person 2</label>
    <type>Checkbox</type>
</CustomField>