force-app/main/default/objects/df_160_person__c/fields/person_hidden_sort_fr_frst__c.field-meta.xml
<CustomField>
    <fullName>person_hidden_sort_fr_frst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Field - Sort får - Arv ef 6bc84</label>
    <type>Checkbox</type>
</CustomField>