force-app/main/default/objects/df_160_person__c/fields/person_hidden_subs_begunst_p2__c.field-meta.xml
<CustomField>
    <fullName>person_hidden_subs_begunst_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Field - Begunstiget af Pe ecd31</label>
    <type>Checkbox</type>
</CustomField>