force-app/main/default/objects/df_160_person__c/fields/person_hidden_unsket_vrge__c.field-meta.xml
<CustomField>
    <fullName>person_hidden_unsket_vrge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden Field - BT - Uønsket værg 111b4</label>
    <type>Checkbox</type>
</CustomField>