force-app/main/default/objects/df_160_person__c/fields/person_matrikelnummer__c.field-meta.xml
<CustomField>
    <fullName>person_matrikelnummer__c</fullName>
    <label>Matrikelnummerx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>