force-app/main/default/objects/df_160_person__c/fields/person_medlem_dfj__c.field-meta.xml
<CustomField>
    <fullName>person_medlem_dfj__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medlem af Din Familiejurist</label>
    <type>Checkbox</type>
</CustomField>