force-app/main/default/objects/df_160_person__c/fields/person_oplsnng_korrkt__c.field-meta.xml
<CustomField>
    <fullName>person_oplsnng_korrkt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oplysninger korrekte</label>
    <type>Checkbox</type>
</CustomField>