force-app/main/default/objects/df_160_person__c/fields/person_org_by__c.field-meta.xml
<CustomField>
    <fullName>person_org_by__c</fullName>
    <label>Organisationens by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>