force-app/main/default/objects/df_160_person__c/fields/person_org_postnr__c.field-meta.xml
<CustomField>
    <fullName>person_org_postnr__c</fullName>
    <label>Organisationens postnummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>