force-app/main/default/objects/df_160_person__c/fields/person_postnummer__c.field-meta.xml
<CustomField>
    <fullName>person_postnummer__c</fullName>
    <label>Postnummerx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>