force-app/main/default/objects/df_160_person__c/fields/person_relation_til_opr__c.field-meta.xml
<CustomField>
    <fullName>person_relation_til_opr__c</fullName>
    <label>Relation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>person_relation_til_opr_gteflle</fullName>
                <label>Ægtefælle</label>
            </value>
            <value>
                <fullName>person_relation_forlder</fullName>
                <label>Forælder</label>
            </value>
            <value>
                <fullName>person_relation_søskende</fullName>
                <label>Søskende</label>
            </value>
            <value>
                <fullName>person_relation_barnebarn</fullName>
                <label>Barnebarn</label>
            </value>
            <value>
                <fullName>person_relation_ftter_kusine</fullName>
                <label>Fætter/Kusine</label>
            </value>
            <value>
                <fullName>person_relation_nev_niece</fullName>
                <label>Nevø/Niece</label>
            </value>
            <value>
                <fullName>person_relation_eks_partner</fullName>
                <label>Eks-partner</label>
            </value>
            <value>
                <fullName>person_relation_ikke_fam</fullName>
                <label>Ikke familie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>