force-app/main/default/objects/df_160_person__c/fields/person_sidste_4_cpr__c.field-meta.xml
<CustomField>
    <fullName>person_sidste_4_cpr__c</fullName>
    <label>Sidste 4 cifre i CPR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>