force-app/main/default/objects/df_160_person__c/fields/person_telefonnummer__c.field-meta.xml
<CustomField>
    <fullName>person_telefonnummer__c</fullName>
    <label>Telefonnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>