force-app/main/default/objects/df_160_person__c/fields/ss_fuldmgtige_for_person_1__c.field-meta.xml
<CustomField>
    <fullName>ss_fuldmgtige_for_person_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg fuldmægtige for Person 1</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>ss_fuldmgtige_for_person_1</relationshipLabel>
    <relationshipName>ss_fuldmgtige_for_person_1</relationshipName>
    <type>Lookup</type>
</CustomField>