force-app/main/default/objects/df_160_person__c/fields/subs_fuldmgtge_p1__c.field-meta.xml
<CustomField>
    <fullName>subs_fuldmgtge_p1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiære fuldmægtige for Perso 599ed</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>subs_fuldmgtge_p1</relationshipLabel>
    <relationshipName>subs_fuldmgtge_p1</relationshipName>
    <type>Lookup</type>
</CustomField>