force-app/main/default/objects/df_160_person__c/fields/subsidir_fuldmgtig_bool_p2__c.field-meta.xml
<CustomField>
    <fullName>subsidir_fuldmgtig_bool_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subsidiær fuldmægtig</label>
    <type>Checkbox</type>
</CustomField>