force-app/main/default/objects/df_160_person__c/fields/unskede_vrger_brnetestamente__c.field-meta.xml
<CustomField>
    <fullName>unskede_vrger_brnetestamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uønskede værger</label>
    <type>Checkbox</type>
</CustomField>