force-app/main/default/objects/df_160_person__c/fields/vrge_brnetestamente__c.field-meta.xml
<CustomField>
    <fullName>vrge_brnetestamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Værge</label>
    <type>Checkbox</type>
</CustomField>