force-app/main/default/objects/df_160_person__c/fields/vrger_brnetestamente_DE64R1MW55__c.field-meta.xml
<CustomField>
    <fullName>vrger_brnetestamente_DE64R1MW55__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Værger</label>
    <type>Checkbox</type>
</CustomField>