force-app/main/default/objects/df_160_person__c/fields/Year_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Birth__c</fullName>
    <formula>TEXT(
    IF(
        VALUE(RIGHT(Birthday__c, 2)) &lt;= 24,
        2000 + VALUE(RIGHT(Birthday__c, 2)),
        1900 + VALUE(RIGHT(Birthday__c, 2))
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of Birth</label>
    <type>Text</type>
</CustomField>